--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="profile-image-container">
-                <img src="assets/images/profile.png" alt="Max Zeitler" class="profile-image">
+                <img src="assets/images/profile.jpeg" alt="Max Zeitler" class="profile-image">
             </div>
         </header>
 
