--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header>
             <div class="header-content">
                 <h1>Max Zeitler</h1>
-                <p class="subtitle">Dual Student Data Science • AI Researcher • Solutions Engineer</p>
+                <p class="subtitle">Dual Student Data Science • AI Research • Solutions Engineering</p>
 
                 <div class="bio-list">
                     <div class="bio-item">
@@ -48,7 +48,8 @@
                     </div>
                     <div class="bio-item">
                         <span class="bio-icon">💼</span>
-                        <span class="bio-text">AI Solutions & Research Intern @ Hewlett Packard Enterprise</span>
+                        <span class="bio-text">Rotational dual-study program – full time internships @ Hewlett Packard
+                            Enterprise</span>
                     </div>
                     <div class="bio-item">
                         <span class="bio-icon">🚀</span>
