--- a/project-detail.html
+++ b/project-detail.html
@@ -183,20 +183,56 @@
 
         /* Responsive adjustment */
         @media (max-width: 768px) {
+            .detail-container {
+                padding: 2rem 1.25rem 4rem;
+            }
+
             .detail-header {
                 flex-direction: column;
                 /* Stack on mobile */
                 align-items: center;
                 text-align: center;
-                gap: 2rem;
+                gap: 1.5rem;
+                margin-bottom: 2.5rem;
             }
 
             .detail-icon-container {
-                padding: 1.5rem;
+                padding: 1.25rem;
+            }
+
+            .detail-icon-container i {
+                font-size: 2.5rem;
+            }
+
+            .detail-title {
+                font-size: 1.8rem;
+            }
+
+            .detail-subtitle {
+                font-size: 0.95rem;
             }
 
             .detail-tags {
                 justify-content: center;
+            }
+
+            .detail-content {
+                font-size: 0.95rem;
+                line-height: 1.7;
+            }
+
+            .tech-highlights h3 {
+                font-size: 1.2rem;
+            }
+
+            .tech-list li {
+                font-size: 0.92rem;
+            }
+
+            .back-link {
+                font-size: 0.9rem;
+                margin-bottom: 2.5rem;
+                padding: 0.5rem 0;
             }
 
             .detail-footer-links {
