--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Max Zeitler</title>
+    <title>Max Zeitler — Projects in Data Science, AI & Software Engineering</title>
+    <meta name="description"
+        content="Browse all projects by Max Zeitler — Data Science, AI, LLM benchmarking, Digital Twins, web development, and more.">
+    <link rel="canonical" href="https://mzaex7.github.io/Project-list/projects.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Max Zeitler — Projects">
+    <meta property="og:description"
+        content="Browse all projects by Max Zeitler — Data Science, AI, LLM benchmarking, Digital Twins, web development, and more.">
+    <meta property="og:url" content="https://mzaex7.github.io/Project-list/projects.html">
+    <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta property="og:site_name" content="Max Zeitler Portfolio">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Projects | Max Zeitler">
+    <meta name="twitter:description" content="Data Science, AI, LLM benchmarking, Digital Twins, and more.">
+    <meta name="twitter:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 
@@ -16,7 +35,7 @@
     <div class="background-glow"></div>
 
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar" aria-label="Main navigation">
         <div class="nav-container">
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
@@ -38,18 +57,95 @@
         <main id="project-grid" class="project-list">
             <!-- All projects injected here via JS -->
             <!-- Class "project-list" triggers the horizontal layout -->
+            <noscript>
+                <article>
+                    <h3>BrewRef — Specialty Coffee App</h3>
+                    <p>Cross-platform mobile app for espresso brew logging, analysis, and AI-powered optimization. Built
+                        with Expo, React Native, and TypeScript.</p>
+                </article>
+                <article>
+                    <h3>Social Networks Analysis</h3>
+                    <p>Data cleaning, visualization, and scientific writing using R. Analysis of complex network
+                        structures.</p>
+                </article>
+                <article>
+                    <h3>Rotten Tomatoes Clone</h3>
+                    <p>Development of a complete database architecture for review aggregation. Relational databases and
+                        SQL programming.</p>
+                </article>
+                <article>
+                    <h3>Corporate Website markzeitler.de</h3>
+                    <p>Development of a modern web presence for a company. Implemented with React.</p>
+                </article>
+                <article>
+                    <h3>Environmental Learning Platform</h3>
+                    <p>Case study: Building an interactive learning platform on environmental protection. Agile project
+                        management (Scrum) and Next.js.</p>
+                </article>
+                <article>
+                    <h3>Data Analysis &amp; Visualization</h3>
+                    <p>Data analysis project including scientific paper and creation of an interactive dashboard with
+                        Streamlit and Python.</p>
+                </article>
+                <article>
+                    <h3>LLM Benchmark Framework</h3>
+                    <p>Framework for performance benchmarking of ML Inference Software (HPE, Ollama, BentoML, vLLM,
+                        Triton). Comparison of KPIs such as latency and evaluation.</p>
+                </article>
+                <article>
+                    <h3>Inference Performance Dashboards</h3>
+                    <p>Creation of comprehensive monitoring dashboards to visualize inference performance with Grafana.
+                    </p>
+                </article>
+                <article>
+                    <h3>Digital Twin &amp; Robotics</h3>
+                    <p>Work with Nvidia Isaac Sim: Robot training and generation of synthetic data (Nvidia Cosmos).
+                        Deployment guides and use-case elaboration.</p>
+                </article>
+                <article>
+                    <h3>Model Context Protocol (MCP)</h3>
+                    <p>Elaboration and presentation of the Model Context Protocol (MCP) for standardizing AI contexts.
+                    </p>
+                </article>
+                <article>
+                    <h3>Competitor Analysis PCAI</h3>
+                    <p>Comprehensive analysis of PCAI and partner offerings. Presentation of results to over 100
+                        colleagues.</p>
+                </article>
+                <article>
+                    <h3>Data Catalog Evaluation</h3>
+                    <p>Analysis and evaluation of various Data Catalog tools for enterprise data management.</p>
+                </article>
+                <article>
+                    <h3>Scrabble AI</h3>
+                    <p>AI Research Project: Programming an artificial intelligence for the game Scrabble in Python.</p>
+                </article>
+                <article>
+                    <h3>Formula Student Big Data</h3>
+                    <p>Conception and elaboration of a Big Data platform based on HDFS for the Formula Student Team.</p>
+                </article>
+                <article>
+                    <h3>Data Management Workloads</h3>
+                    <p>Comparison of analytical workloads: Parquet Scan, Pandas vs. DuckDB vs. Polars. Performance
+                        investigation.</p>
+                </article>
+                <article>
+                    <h3>Beer XAI Research</h3>
+                    <p>Research project in Explainable AI (XAI) using SHAP values on the example of beer data.</p>
+                </article>
+            </noscript>
         </main>
 
         <footer>
             <div class="social-links" style="margin-bottom: 0;">
-                <a href="https://github.com/Mzaex7" class="social-icon" title="GitHub" target="_blank"><i
-                        class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/max-zeitler" class="social-icon" title="LinkedIn"
-                    target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Mzaex7" class="social-icon" title="GitHub" target="_blank"
+                    rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/max-zeitler" class="social-icon" title="LinkedIn" target="_blank"
+                    rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:zeitler.max04@gmail.com" class="social-icon" title="Email"><i
                         class="fas fa-envelope"></i></a>
-                <a href="CV_Max_Zeitler.pdf" class="social-icon" title="Resume" target="_blank"><i
-                        class="fas fa-file-alt"></i></a>
+                <a href="CV_Max_Zeitler.pdf" class="social-icon" title="Resume" target="_blank"
+                    rel="noopener noreferrer"><i class="fas fa-file-alt"></i></a>
             </div>
         </footer>
     </div>
