--- a/project-detail.html
+++ b/project-detail.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Details | Max Zeitler</title>
+    <meta name="description"
+        content="Project details — Max Zeitler's portfolio in Data Science, AI, and Software Engineering.">
+    <link rel="canonical" href="https://mzaex7.github.io/Project-list/project-detail.html">
+
+    <!-- Open Graph (fallback — overridden by JS) -->
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Project Details | Max Zeitler">
+    <meta property="og:description"
+        content="Project details — Max Zeitler's portfolio in Data Science, AI, and Software Engineering.">
+    <meta property="og:url" content="https://mzaex7.github.io/Project-list/project-detail.html">
+    <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta property="og:site_name" content="Max Zeitler Portfolio">
+
+    <!-- Twitter Card (fallback — overridden by JS) -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Project Details | Max Zeitler">
+    <meta name="twitter:description" content="Project details — Max Zeitler's portfolio.">
+    <meta name="twitter:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 
