--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -7,14 +7,19 @@
     <title>Max Zeitler | Portfolio — Data Science, AI & Software Engineering</title>
     <meta name="description"
         content="Portfolio of Max Zeitler — Dual Student in Business Informatics specializing in Data Science, AI, LLMs, RAG, and Digital Twins. Projects and experience at Hewlett Packard Enterprise.">
-    <link rel="canonical" href="https://mzaex7.github.io/Project-list/index.html">
+    <meta name="keywords"
+        content="Max Zeitler, M Zeitler, Portfolio, Data Science, AI, Artificial Intelligence, LLMs, RAG, Digital Twins, Hewlett Packard Enterprise, DHBW Stuttgart, Software Engineering">
+    <meta name="author" content="Max Zeitler">
+    <link rel="canonical" href="https://mzaex7.github.io/Project-list/">
+    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/">
+    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Max Zeitler | Portfolio — Data Science, AI & Software Engineering">
     <meta property="og:description"
         content="Portfolio of Max Zeitler — Dual Student in Business Informatics specializing in Data Science, AI, LLMs, RAG, and Digital Twins.">
-    <meta property="og:url" content="https://mzaex7.github.io/Project-list/index.html">
+    <meta property="og:url" content="https://mzaex7.github.io/Project-list/">
     <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
     <meta property="og:site_name" content="Max Zeitler Portfolio">
 
@@ -65,6 +70,18 @@
             "@type": "WebSite",
             "name": "Max Zeitler Portfolio",
             "url": "https://mzaex7.github.io/Project-list/"
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://mzaex7.github.io/Project-list/"
+                }
+            ]
         }
     ]
     </script>
