--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,12 @@
     <title>Max Zeitler — Projects in Data Science, AI & Software Engineering</title>
     <meta name="description"
         content="Browse all projects by Max Zeitler — Data Science, AI, LLM benchmarking, Digital Twins, web development, and more.">
+    <meta name="keywords"
+        content="Max Zeitler, M Zeitler, Projects, Data Science, AI, LLM Benchmarking, Digital Twins, Software Engineering">
+    <meta name="author" content="Max Zeitler">
     <link rel="canonical" href="https://mzaex7.github.io/Project-list/projects.html">
+    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/projects.html">
+    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/projects.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -29,6 +34,43 @@
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Projects by Max Zeitler",
+            "description": "Browse all projects by Max Zeitler in Data Science, AI, and Software Engineering.",
+            "url": "https://mzaex7.github.io/Project-list/projects.html",
+            "author": {
+                "@type": "Person",
+                "name": "Max Zeitler",
+                "alternateName": "M Zeitler",
+                "url": "https://mzaex7.github.io/Project-list/"
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://mzaex7.github.io/Project-list/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Projects",
+                    "item": "https://mzaex7.github.io/Project-list/projects.html"
+                }
+            ]
+        }
+    ]
+    </script>
 </head>
 
 <body>
