--- a/project-detail.html
+++ b/project-detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,11 @@
     <title>Project Details | Max Zeitler</title>
     <meta name="description"
         content="Project details — Max Zeitler's portfolio in Data Science, AI, and Software Engineering.">
+    <meta name="keywords" content="Max Zeitler, M Zeitler, Project, Data Science, AI, Software Engineering, Portfolio">
+    <meta name="author" content="Max Zeitler">
     <link rel="canonical" href="https://mzaex7.github.io/Project-list/project-detail.html">
+    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/project-detail.html">
+    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/project-detail.html">
 
     <!-- Open Graph (fallback — overridden by JS) -->
     <meta property="og:type" content="article">
@@ -29,6 +33,37 @@
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://mzaex7.github.io/Project-list/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Projects",
+                    "item": "https://mzaex7.github.io/Project-list/projects.html"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Project Details",
+                    "item": "https://mzaex7.github.io/Project-list/project-detail.html"
+                }
+            ]
+        }
+    ]
+    </script>
+
     <style>
         /* Detail Page Styling */
 
