--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <meta name="keywords"
         content="Max Zeitler, M Zeitler, Portfolio, Data Science, AI, Artificial Intelligence, LLMs, RAG, Digital Twins, Hewlett Packard Enterprise, DHBW Stuttgart, Software Engineering">
     <meta name="author" content="Max Zeitler">
-    <link rel="canonical" href="https://mzaex7.github.io/Project-list/">
-    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/">
-    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/">
+    <link rel="canonical" href="https://mzeitler.com/">
+    <link rel="alternate" hreflang="de" href="https://mzeitler.com/">
+    <link rel="alternate" hreflang="en" href="https://mzeitler.com/">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Max Zeitler | Portfolio — Data Science, AI & Software Engineering">
     <meta property="og:description"
         content="Portfolio of Max Zeitler — Dual Student in Business Informatics specializing in Data Science, AI, LLMs, RAG, and Digital Twins.">
-    <meta property="og:url" content="https://mzaex7.github.io/Project-list/">
-    <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta property="og:url" content="https://mzeitler.com/">
+    <meta property="og:image" content="https://mzeitler.com/assets/images/profile.jpeg">
     <meta property="og:site_name" content="Max Zeitler Portfolio">
 
     <!-- Twitter Card -->
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="Max Zeitler | Portfolio">
     <meta name="twitter:description"
         content="Data Science, AI, LLMs, RAG, Digital Twins — Projects and experience at Hewlett Packard Enterprise.">
-    <meta name="twitter:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta name="twitter:image" content="https://mzeitler.com/assets/images/profile.jpeg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -40,8 +40,8 @@
                 "@type": "Person",
                 "name": "Max Zeitler",
                 "alternateName": "M Zeitler",
-                "url": "https://mzaex7.github.io/Project-list/",
-                "image": "https://mzaex7.github.io/Project-list/assets/images/profile.jpeg",
+                "url": "https://mzeitler.com/",
+                "image": "https://mzeitler.com/assets/images/profile.jpeg",
                 "jobTitle": "Dual Student Data Science",
                 "description": "Data Science student specializing in AI, LLMs, RAG, and Digital Twins at Hewlett Packard Enterprise and DHBW Stuttgart.",
                 "worksFor": {
@@ -69,7 +69,7 @@
             "@context": "https://schema.org",
             "@type": "WebSite",
             "name": "Max Zeitler Portfolio",
-            "url": "https://mzaex7.github.io/Project-list/"
+            "url": "https://mzeitler.com/"
         },
         {
             "@context": "https://schema.org",
@@ -79,7 +79,7 @@
                     "@type": "ListItem",
                     "position": 1,
                     "name": "Home",
-                    "item": "https://mzaex7.github.io/Project-list/"
+                    "item": "https://mzeitler.com/"
                 }
             ]
         }
