--- a/project-detail.html
+++ b/project-detail.html
@@ -9,24 +9,24 @@
         content="Project details — Max Zeitler's portfolio in Data Science, AI, and Software Engineering.">
     <meta name="keywords" content="Max Zeitler, M Zeitler, Project, Data Science, AI, Software Engineering, Portfolio">
     <meta name="author" content="Max Zeitler">
-    <link rel="canonical" href="https://mzaex7.github.io/Project-list/project-detail.html">
-    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/project-detail.html">
-    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/project-detail.html">
+    <link rel="canonical" href="https://mzeitler.com/project-detail.html">
+    <link rel="alternate" hreflang="de" href="https://mzeitler.com/project-detail.html">
+    <link rel="alternate" hreflang="en" href="https://mzeitler.com/project-detail.html">
 
     <!-- Open Graph (fallback — overridden by JS) -->
     <meta property="og:type" content="article">
     <meta property="og:title" content="Project Details | Max Zeitler">
     <meta property="og:description"
         content="Project details — Max Zeitler's portfolio in Data Science, AI, and Software Engineering.">
-    <meta property="og:url" content="https://mzaex7.github.io/Project-list/project-detail.html">
-    <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta property="og:url" content="https://mzeitler.com/project-detail.html">
+    <meta property="og:image" content="https://mzeitler.com/assets/images/profile.jpeg">
     <meta property="og:site_name" content="Max Zeitler Portfolio">
 
     <!-- Twitter Card (fallback — overridden by JS) -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Project Details | Max Zeitler">
     <meta name="twitter:description" content="Project details — Max Zeitler's portfolio.">
-    <meta name="twitter:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta name="twitter:image" content="https://mzeitler.com/assets/images/profile.jpeg">
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
@@ -45,19 +45,19 @@
                     "@type": "ListItem",
                     "position": 1,
                     "name": "Home",
-                    "item": "https://mzaex7.github.io/Project-list/"
+                    "item": "https://mzeitler.com/"
                 },
                 {
                     "@type": "ListItem",
                     "position": 2,
                     "name": "Projects",
-                    "item": "https://mzaex7.github.io/Project-list/projects.html"
+                    "item": "https://mzeitler.com/projects.html"
                 },
                 {
                     "@type": "ListItem",
                     "position": 3,
                     "name": "Project Details",
-                    "item": "https://mzaex7.github.io/Project-list/project-detail.html"
+                    "item": "https://mzeitler.com/project-detail.html"
                 }
             ]
         }
