--- a/projects.html
+++ b/projects.html
@@ -10,24 +10,24 @@
     <meta name="keywords"
         content="Max Zeitler, M Zeitler, Projects, Data Science, AI, LLM Benchmarking, Digital Twins, Software Engineering">
     <meta name="author" content="Max Zeitler">
-    <link rel="canonical" href="https://mzaex7.github.io/Project-list/projects.html">
-    <link rel="alternate" hreflang="de" href="https://mzaex7.github.io/Project-list/projects.html">
-    <link rel="alternate" hreflang="en" href="https://mzaex7.github.io/Project-list/projects.html">
+    <link rel="canonical" href="https://mzeitler.com/projects.html">
+    <link rel="alternate" hreflang="de" href="https://mzeitler.com/projects.html">
+    <link rel="alternate" hreflang="en" href="https://mzeitler.com/projects.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Max Zeitler — Projects">
     <meta property="og:description"
         content="Browse all projects by Max Zeitler — Data Science, AI, LLM benchmarking, Digital Twins, web development, and more.">
-    <meta property="og:url" content="https://mzaex7.github.io/Project-list/projects.html">
-    <meta property="og:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta property="og:url" content="https://mzeitler.com/projects.html">
+    <meta property="og:image" content="https://mzeitler.com/assets/images/profile.jpeg">
     <meta property="og:site_name" content="Max Zeitler Portfolio">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Projects | Max Zeitler">
     <meta name="twitter:description" content="Data Science, AI, LLM benchmarking, Digital Twins, and more.">
-    <meta name="twitter:image" content="https://mzaex7.github.io/Project-list/assets/images/profile.jpeg">
+    <meta name="twitter:image" content="https://mzeitler.com/assets/images/profile.jpeg">
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
@@ -43,12 +43,12 @@
             "@type": "CollectionPage",
             "name": "Projects by Max Zeitler",
             "description": "Browse all projects by Max Zeitler in Data Science, AI, and Software Engineering.",
-            "url": "https://mzaex7.github.io/Project-list/projects.html",
+            "url": "https://mzeitler.com/projects.html",
             "author": {
                 "@type": "Person",
                 "name": "Max Zeitler",
                 "alternateName": "M Zeitler",
-                "url": "https://mzaex7.github.io/Project-list/"
+                "url": "https://mzeitler.com/"
             }
         },
         {
@@ -59,13 +59,13 @@
                     "@type": "ListItem",
                     "position": 1,
                     "name": "Home",
-                    "item": "https://mzaex7.github.io/Project-list/"
+                    "item": "https://mzeitler.com/"
                 },
                 {
                     "@type": "ListItem",
                     "position": 2,
                     "name": "Projects",
-                    "item": "https://mzaex7.github.io/Project-list/projects.html"
+                    "item": "https://mzeitler.com/projects.html"
                 }
             ]
         }
